src/widgets/snapshots/rstv__widgets__page_stack__tests__snapshot_first_page_active.snap
---
source: src/widgets/page_stack.rs
expression: render(0)
---
size: 20x3
cursor: hidden
text:
|PAGE ZERO           |
|                    |
|                    |
attr:
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
